feat(clients): change client field token to api key and change responses. update api docs
